# cmp-embed

./: .gitignore  AI_CONTEXT.md  CMakeLists.txt  README.md  TODO  TODO.txt
common/: input_protocol.h
demo/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
demo/scripts/: build.sh  gen_loading_preview.sh  install_plugin.sh  run_only_ui_with_hot_reload.sh  run_standalone.sh
demo/ui/: .gitignore  settings.gradle.kts
demo/ui/composeApp/: build.gradle.kts
demo/ui/composeApp/src/jvmMain/kotlin/juce_cmp/demo/: App.kt  Greeting.kt  Knob.kt  Platform.kt  main.kt
demo/ui/composeApp/src/main/kotlin/juce_cmp/demo/: AnimatedWords.kt  Background.kt  FallingSnow.kt  Knob.kt  ParameterState.kt  Title.kt  UserInterface.kt  main.kt
docs/: mac-notes.md
host/: iosurface_provider.m  main.m
juce/: CMakeLists.txt  LoadingPreview.h  PluginEditor.cpp  PluginEditor.h
juce/bridge/: IOSurfaceComponent.h  IOSurfaceComponent.mm  IOSurfaceProvider.h  IOSurfaceProvider.mm  InputSender.cpp  InputSender.h
juce_cmp/: juce_cmp.cpp  juce_cmp.h  juce_cmp.mm
juce_cmp/juce_cmp/: ChildProcess.cpp  ChildProcess.h  ComposeComponent.cpp  ComposeComponent.h  ComposeComponent.mm  ComposeProvider.cpp  ComposeProvider.h  ComposeProvider.mm  EventReceiver.h  IOSurfaceComponent.h  IOSurfaceComponent.mm  IOSurfaceProvider.h  IOSurfaceProvider.mm  InputEvent.h  InputSender.cpp  InputSender.h  Ipc.cpp  Ipc.h  LoadingPreview.h  MachPort.mm  MachPortIPC.h  MachPortIPC.mm  Surface.h  Surface.mm  SurfaceView.h  SurfaceView.mm  UIReceiver.h  helpers.h  input_protocol.h  ipc_protocol.h  ui_helpers.h  ui_protocol.h
juce_cmp_ui/: settings.gradle.kts
juce_cmp_ui/lib/: build.gradle.kts
juce_cmp_ui/lib/src/jvmMain/kotlin/juce_cmp/: UISender.kt
juce_cmp_ui/lib/src/jvmMain/kotlin/juce_cmp/input/: InputDispatcher.kt  InputEvent.kt  InputMapper.kt  InputReceiver.kt
juce_cmp_ui/lib/src/jvmMain/kotlin/juce_cmp/renderer/: IOSurfaceLib.kt  IOSurfaceRenderer.kt  IOSurfaceRendererCPU.kt  IOSurfaceRendererGPU.kt
juce_cmp_ui/lib/src/main/cpp/: iosurface_renderer.m
juce_cmp_ui/lib/src/main/kotlin/juce/: ValueTree.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/: Library.kt  UISender.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/events/: EventReceiver.kt  EventSender.kt  JuceValueTree.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/input/: InputDispatcher.kt  InputEvent.kt  InputReceiver.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/ipc/: Ipc.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/renderer/: IOSurfaceLib.kt  IOSurfaceRenderer.kt  IOSurfaceRendererCPU.kt  IOSurfaceRendererGPU.kt  IOSurfaceRendererImpl.kt  SurfaceFrameCapture.kt
juce_cmp_ui/lib/src/main/kotlin/juce_cmp/widgets/: ResizeHandle.kt
scripts/: build.sh  install.sh  run_juce.sh  run_standalone.sh
standalone/: CMakeLists.txt  input_cocoa.h  input_cocoa.m  iosurface_provider.h  iosurface_provider.m  main.m
ui/composeApp/: build.gradle.kts
ui/composeApp/src/jvmMain/kotlin/cmpui/: App.kt  main.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/bridge/input/: InputDispatcher.kt  InputEvent.kt  InputMapper.kt  InputReceiver.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/bridge/renderer/: IOSurfaceLib.kt  IOSurfaceRenderer.kt  IOSurfaceRendererCPU.kt  IOSurfaceRendererGPU.kt
ui/composeApp/src/jvmMain/kotlin/cmpui/widgets/: Knob.kt
ui/composeApp/src/jvmMain/kotlin/kmpui/: App.kt  Greeting.kt  IOSurfaceRenderer.kt  Platform.kt  main.kt
ui/composeApp/src/jvmMain/kotlin/kmpui/input/: InputDispatcher.kt  InputEvent.kt  InputMapper.kt  InputReceiver.kt
ui/composeApp/src/jvmMain/kotlin/kmpui/renderer/: IOSurfaceLib.kt  IOSurfaceRendererCPU.kt  IOSurfaceRendererGPU.kt
